added travis.yml to enable continuous integration on github

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,11 @@
+2013-11-05  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Added to support continuous integration on github
+
 2013-10-28 Romain Francois <romain@r-enthusiasts.com>
 
         * include/Rcpp/protection/Armor.h : Armor::operator SEXP has to be const
-        for it to work properly with wrap. 
+        for it to work properly with wrap.
 
 2013-10-27  Dirk Eddelbuettel  <edd@debian.org>
 
