rename m_sexp so that we can keep track of non policy based api useage

--- a/vignettes/Rcpp-extending.Rnw
+++ b/vignettes/Rcpp-extending.Rnw
@@ -94,7 +94,7 @@ versa.  The corresponding function declarations are as follows:
 
 <<lang=cpp>>=
 // conversion from R to C++
-template <typename T> T as( SEXP m_sexp) ;
+template <typename T> T as( SEXP x) ;
 
 // conversion from C++ to R
 template <typename T> SEXP wrap(const T& object) ;
