--- a/vignettes/Rcpp-FAQ.Rnw
+++ b/vignettes/Rcpp-FAQ.Rnw
@@ -157,6 +157,8 @@ Additional packages that we have found useful are
   some of our tests but it is not strictly required;
 \item[\pkg{rbenchmark}] to run simple timing comparisons and benchmarks; it is also
   recommended but not required.
+\item[\pkg{microbenchmark}] is an alternative for benchmarking.
+\item[\pkg{devtools}] can help the process of making a package. 
 \end{description}
 
 
