add year, volume, month, pages for CSDA paper

--- a/vignettes/Rcpp.bib
+++ b/vignettes/Rcpp.bib
@@ -311,6 +311,18 @@
   url =          {http://dx.doi.org/10.1016/j.csda.2013.02.005}
 }
 
+@Article{Eddelbuettel+Sanderson:2014:RcppArmadillo,
+  title =	 {{RcppArmadillo}: Accelerating {R} with High-Performance {C++} Linear Algebra},
+  author =	 {Dirk Eddelbuettel and Conrad Sanderson},
+  journal =	 {Computational Statistics and Data Analysis},
+  year =	 2014,
+  volume =	 71,
+  month =        {March},
+  pages =        {1054--1063},
+  doi =          {10.1016/j.csda.2013.02.005},
+  url =          {http://dx.doi.org/10.1016/j.csda.2013.02.005}
+}
+
 ; see http://eigen.tuxfamily.org/index.php?title=BibTeX
 ; replaced 'howpublished' with 'url' and updated year to 2011, and again to 2012
 @MISC{Eigen:Web,
