update Eddelbuettel and Sanderson (2013) too

--- a/vignettes/Rcpp.bib
+++ b/vignettes/Rcpp.bib
@@ -305,8 +305,10 @@
   title =	 {{RcppArmadillo}: Accelerating {R} with High-Performance {C++} Linear Algebra},
   author =	 {Dirk Eddelbuettel and Conrad Sanderson},
   journal =	 {Computational Statistics and Data Analysis},
-  year =	 2013,
-  volume =	 {(in press)},
+  year =	 2014,
+  volume =	 71,
+  month =        {March},
+  pages =        {1054--1063},
   doi =          {10.1016/j.csda.2013.02.005},
   url =          {http://dx.doi.org/10.1016/j.csda.2013.02.005}
 }
