correct use of href

--- a/vignettes/Rcpp-FAQ.Rnw
+++ b/vignettes/Rcpp-FAQ.Rnw
@@ -158,7 +158,7 @@ Additional packages that we have found useful are
 \item[\pkg{rbenchmark}] to run simple timing comparisons and benchmarks; it is also
   recommended but not required.
 \item[\pkg{microbenchmark}] is an alternative for benchmarking.
-\item[\pkg{devtools}] can help the process of making a package. 
+\item[\pkg{devtools}] can help the process of making a package.
 \end{description}
 
 
@@ -719,7 +719,8 @@ The
 mailing list hosted at R-forge is by far the best place.  You may also want
 to look at the list archives to see if your question has been asked before.
 
-You can also use Stack Overflow with the rcpp tag. \href{http://stackoverflow.com/questions/tagged/rcpp}
+You can also use \href{http://stackoverflow.com/questions/tagged/rcpp}{Stack
+  Overflow via its 'rcpp' tag}.
 
 \subsection{Where can I read old questions and answers ?}
 
@@ -736,8 +737,8 @@ searching.
 \subsection{I like it. How can I help ?}
 \label{helping}
 
-We maintain a list of issues in the github repository 
-we use. \href{https://github.com/RcppCore/Rcpp/issues?state=open}. 
+We maintain a list of issues in the github repository
+we use. \href{https://github.com/RcppCore/Rcpp/issues?state=open}.
 
 If you are willing to donate time and have skills in C++, let us know. If you are
 willing to donate money to sponsor improvements, let us know.
@@ -754,7 +755,7 @@ what it is that you dislike. We are very open to \emph{constructive} criticism.
 \subsection{Can I have commercial support for \pkg{Rcpp} ?}
 
 Sure you can. Just send us an email, and we will be happy to discuss the
-request. 
+request.
 
 \subsection{I want to learn quickly. Do you provide training courses ?}
 
