--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-12-31  Dirk Eddelbuettel  <edd@debian.org>
+
+	* vignettes/Rcpp.bib: Updated CRAN package references
+
 2013-12-20  Kevin Ushey  <kevinushey@gmail.com>
 
         * inst/include/Rcpp/sugar/tools/mapcompare.h: Use a union for
