--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2014-01-03  JJ Allaire <jj@rstudio.org>
 
-        * Added *.Rproj and .Rproj.user to .gitignore
+        * Added src/<object-files>, *.Rproj, and .Rproj.user to .gitignore
 
 2013-12-31  Dirk Eddelbuettel  <edd@debian.org>
 
