--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2014-01-16  JJ Allaiare <jj@rstudio.org>
 
+        * inst/include/Rcpp/macros/macros.h: Use Rf_onintr rather than 
+        non-public Rf_jump_to_toplevel
         * inst/include/Rcpp/DateVector.h: Fix GreedyVector compilation error
         * inst/include/Rcpp/DatetimeVector.h: Fix GreedyVector compilation error
 
