--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,12 @@
+2014-01-19  Kevin Ushey  <kevinushey@gmail.com>
+
+	* inst/include/Rcpp/api/meat/Vector.h: Add missing UNPROTECT in
+	push_back_name__impl
+
 2014-01-18  Kevin Ushey  <kevinushey@gmail.com>
 
-  * inst/unitTests/runit.S4.R: Add a test for ctor from slot proxy
-  * inst/unitTests/cpp/S4.cpp: Add a test for ctor from slot proxy
+	* inst/unitTests/runit.S4.R: Add a test for ctor from slot proxy
+	* inst/unitTests/cpp/S4.cpp: Add a test for ctor from slot proxy
 	* inst/include/Rcpp/vector/Vector.h: Add missing r_cast to vector
 	ctor from proxy
 
