--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-01-21  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/Rcpp.package.skeleton.R: Update skeleton package to add proper
+	Imports: to DESCRIPTION, and importFrom() to NAMESPACE
+
 2014-01-19  Kevin Ushey  <kevinushey@gmail.com>
 
 	* inst/include/Rcpp/api/meat/Vector.h: Add missing UNPROTECT in
