--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-01-23  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/announce/ANNOUNCE-0.11.0.txt: Added 
+
 2014-01-19  Kevin Ushey  <kevinushey@gmail.com>
 
 	* inst/include/Rcpp/api/meat/Vector.h: Add missing UNPROTECT in
@@ -10,7 +14,7 @@
 	* inst/include/Rcpp/vector/Vector.h: Add missing r_cast to vector
 	ctor from proxy
 
-2014-01-18  JJ Allaiare <jj@rstudio.org>
+2014-01-18  JJ Allaire <jj@rstudio.org>
 
         * R/Attributes.R: More restrictive matching of C++ file extensions
         for compileAttributes.
@@ -26,7 +30,7 @@
 	* R/RcppLdpath.R (RcppCxxFlags): Restore function to supply values
 	for include files for packages not yet converted to LinkingTo:
 
-2014-01-16  JJ Allaiare <jj@rstudio.org>
+2014-01-16  JJ Allaire <jj@rstudio.org>
 
         * inst/include/Rcpp/macros/macros.h: Use Rf_onintr rather than
         non-public Rf_jump_to_toplevel
